gitops/lms-yoshi/radioyoshi/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: lms-yoshi-yoshi-basic-auth@kubernetescrd
  name: lms
spec:
  ingressClassName: traefik
  rules:
    - host: radioyoshi.dixneuf19.fr
      http:
        paths:
          - backend:
              service:
                name: radioyoshi-lyrion-music-server
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - radioyoshi.dixneuf19.fr
      secretName: radioyoshi-dixneuf19-fr-tls
